feat: rework slide cover media, fix ISSUE-28, ISSUE-21, ISSUE-29

--- a/src/Resources/app/administration/src/component/blur-paragraph/template.html.twig
+++ b/src/Resources/app/administration/src/component/blur-paragraph/template.html.twig
@@ -5,16 +5,19 @@
         marginBottom: '32px'
     }">
 
-    <component is="h4" 
-        :style="{
-            fontSize: '16px',
-            fontWeight: '500',
-            margin: '0'
-        }">
-        <slot name="title">
-            <span v-html="title" />
-        </slot>
-    </component>
+    <slot name="title">
+        <component 
+            v-if="title"
+            is="h4" 
+            :style="{
+                fontSize: '16px',
+                fontWeight: '500',
+                margin: '0'
+            }">
+            
+                <span v-html="title" />
+        </component>
+    </slot>
 
     <div v-if="content !== false"
         :style="{
