--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
@@ -1,6 +1,24 @@
 {% block blur_elysium_slides_detail_view %}
     <sw-page class="blur-slysium-slides-detail__page">
 
+        <template #smart-bar-back>
+            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+            <router-link
+                v-if="parentRoute"
+                class="smart-bar__back-btn"
+                :to="{ name: parentRoute }"
+            >
+                <sw-icon
+                    name="regular-chevron-left"
+                    color="#999999"
+                    small
+                />
+                <blur-elysium-icon 
+                    color="#e868a1"
+                    size="16" />
+            </router-link>
+        </template>
+
         {% block blur_elysium_slides_detail_view_smart_bar_header %}
             <template #smart-bar-header>
 
@@ -117,7 +135,10 @@
             <blur-elysium-device-switch 
                 layout="tab"
                 :style="{
-                    backgroundColor: 'white'
+                    backgroundColor: 'white',
+                    position: 'sticky',
+                    top: '0',
+                    zIndex: '10'
                 }"
                 @change-viewport="onChangeViewport" />
 
@@ -184,12 +205,19 @@
                                 slot-scope="media"
                             >
                                 <sw-context-menu-item 
-                                    @click="setMedia(media.mediaItem.id, 'slideCover')">
-                                    {{ $tc('BlurElysiumSlides.mediaForm.useAsCover') }}
+                                    v-if="mediaType(media.mediaItem.mimeType) === 'image'"
+                                    @click="setSlideCoverImage(media.mediaItem)">
+                                    {{ $tc('blurElysiumSlides.slideSettings.slideCover.useAsSlideCover') }}
                                 </sw-context-menu-item>
                                 <sw-context-menu-item 
-                                    @click="setMedia(media.mediaItem.id, 'slideCoverPortrait')">
-                                    {{ $tc('BlurElysiumSlides.mediaForm.useAsCoverPortrait') }}
+                                    v-if="mediaType(media.mediaItem.mimeType) === 'video'"
+                                    @click="setSlideCoverVideo(media.mediaItem)">
+                                    {{ $tc('blurElysiumSlides.slideSettings.slideCover.useAsSlideCover') }}
+                                </sw-context-menu-item>
+                                <sw-context-menu-item 
+                                    v-if="mediaType(media.mediaItem.mimeType) === 'image'"
+                                    @click="setFocusImage(media.mediaItem)">
+                                    {{ $tc('blurElysiumSlides.slideSettings.slideCover.useAsFocusImage') }}
                                 </sw-context-menu-item>
                             </template>
                         </sw-sidebar-media-item>
